* Ausblenden der Overlays bei Verlassen der App * ActivityInfo Objekt hinzugefuegt - vielleicht spaeter wichtig wenn TYPE APPLICATION genutzt werden soll * CSV Test Kommentar eingefügt * Abfrage Berechtigung über andere Apps zu zeichnen - auch vielleicht spaeter wichtig bei TYPE APPLICATION

--- a/app/src/main/res/xml/serviceconfig.xml
+++ b/app/src/main/res/xml/serviceconfig.xml
@@ -2,7 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:accessibilityEventTypes="typeAllMask"
     android:accessibilityFeedbackType="feedbackAllMask"
-    android:accessibilityFlags="flagDefault"
+    android:accessibilityFlags="flagDefault|flagRequestFilterKeyEvents"
+    android:canRequestFilterKeyEvents="true"
     android:canRequestEnhancedWebAccessibility="true"
     android:notificationTimeout="100"
     android:packageNames="@null"
