--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:focusable="false"
+        android:clickable="false"
         android:checked="true"
         />
 
