* Code Cleanup AccessibilityInspectorService

--- a/app/src/main/res/layout/floatingwindow.xml
+++ b/app/src/main/res/layout/floatingwindow.xml
@@ -9,7 +9,7 @@
     android:background="@color/LightGrey">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/infoWindowText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="This is the floating text view\n Hallo"
