--- a/app/src/main/res/layout/floatingwindow.xml
+++ b/app/src/main/res/layout/floatingwindow.xml
@@ -12,16 +12,29 @@
         android:id="@+id/infoWindowText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is the floating text view\n Hallo"
-        android:lineSpacingExtra="20sp"
         android:fontFamily="sans-serif-thin"
+        android:lineSpacingExtra="20sp"
+        android:text="This is the floating text view\n Hallo"
         android:textColor="@color/Black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.098"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.155" />
+        app:layout_constraintVertical_bias="0.173" />
+
+    <Button
+        android:id="@+id/nextInfoButton"
+        android:layout_width="44dp"
+        android:layout_height="89dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.921"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.49" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
