--- a/app/src/main/res/layout/floatingwindow.xml
+++ b/app/src/main/res/layout/floatingwindow.xml
@@ -53,7 +53,7 @@
 
 
             <ImageButton
-                android:id="@+id/imageButton7"
+                android:id="@+id/prevInfoButton"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.15"
