--- a/app/src/main/res/layout/floatingwindow.xml
+++ b/app/src/main/res/layout/floatingwindow.xml
@@ -31,7 +31,7 @@
                 android:src="@drawable/move_arrows25" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/showElementsButton"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
