--- a/app/src/main/res/xml/serviceconfig.xml
+++ b/app/src/main/res/xml/serviceconfig.xml
@@ -1,6 +1,7 @@
 <accessibility-service
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:accessibilityEventTypes="typeAllMask"
+    android:description="@string/accessibility_service_description"
     android:accessibilityFeedbackType="feedbackAllMask"
     android:accessibilityFlags="flagDefault|flagRequestFilterKeyEvents"
     android:canRequestFilterKeyEvents="true"
