* Icon alle anzeigen/nur eins anzeigen ausgetauscht * Credits hinzugefügt zu settings * app name geändert

--- a/app/src/main/res/layout/floatingwindow.xml
+++ b/app/src/main/res/layout/floatingwindow.xml
@@ -35,7 +35,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@drawable/eye_25" />
+                android:src="@drawable/squares_25" />
 
             <ImageButton
                 android:id="@+id/shareButton"
