--- a/app/src/main/res/layout/floatingwindow.xml
+++ b/app/src/main/res/layout/floatingwindow.xml
@@ -28,6 +28,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:clickable="false"
+                android:backgroundTint="@color/DarkGray"
                 android:src="@drawable/move_arrows25" />
 
             <ImageButton
