* Accessibility Checks * Alternativtexte hinzugefügt * Button Größe angepasst

--- a/app/src/main/res/layout/activity_app_list.xml
+++ b/app/src/main/res/layout/activity_app_list.xml
@@ -6,7 +6,9 @@
     <Button
         android:id="@+id/checkButton"
         android:layout_width="match_parent"
+        android:contentDescription="select apps button"
         android:layout_height="wrap_content"
+        android:height="50dp"
         android:text="Waehlen">
     </Button>
 
