--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:textSize="40dp"
+            android:contentDescription="Inspector A11y"
             android:gravity="center"
             android:layout_weight="0.25"
             android:text="Inspector A11y" />
@@ -25,6 +26,7 @@
         <Button
             android:id="@+id/appSelectorScreenBtn"
             android:layout_width="match_parent"
+            android:contentDescription="button to get the App select menu"
             android:layout_height="0dp"
             android:layout_weight="0.25"
             android:text="Zu untersuchende Apps auswählen" />
@@ -32,6 +34,7 @@
         <Button
             android:id="@+id/settingsButton"
             android:layout_width="match_parent"
+            android:contentDescription="button to get to app settings"
             android:layout_height="0dp"
             android:layout_weight="0.25"
             android:background="@color/Red"
@@ -41,6 +44,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/exportDataButton"
+            android:contentDescription="button opens share intent to share report"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.25"
